@@ -1,9 +1,8 @@
 package tech.jhipster.lite.project.infrastructure.secondary;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -26,9 +25,11 @@ class NpmProjectFormatterTest {
 
     formatter.format(new ProjectPath(directory));
 
-    assertThat(Files.readString(jsonFile)).isEqualTo("""
-        { "key": "value" }
-        """);
+    assertThat(Files.readString(jsonFile)).isEqualTo(
+      """
+      { "key": "value" }
+      """
+    );
   }
 
   private static Path simpleNpmProject(String directory) throws IOException {
@@ -38,9 +39,12 @@ class NpmProjectFormatterTest {
     Files.copy(Paths.get("src/test/resources/projects/files/package.json"), path.resolve("package.json"));
 
     Path jsonFile = path.resolve("file.json");
-    Files.write(jsonFile, """
-        {"key":"value"}
-        """.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(
+      jsonFile,
+      """
+      {"key":"value"}
+      """
+    );
 
     return jsonFile;
   }
